Fix layout bug on mobile screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ h2 {
     background-color: #7bcbc7;
     margin-top: 0;
     margin-bottom: 6px;
-    padding: 6px;
+    padding: 10px 0;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
@@ -205,6 +205,7 @@ body.darkMode #options {
     opacity: 0;
     position: absolute;
     z-index: -1;
+    display: block;
 }
 label#fileSelectorLabel {
     cursor: pointer;
